# bevyFlapAttempt

./: Cargo.toml
assets/: bird.xcf
src/: bird.rs  gamedata.rs  gamestate.rs  main.rs  physics.rs  pipes.rs
