[package]
name = "flap"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Enable small amnt of optimization in debug mode
[profile.dev]
opt-level = 1

# High optimization for dependencies
[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = "0.11.3"
